--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "mercadopago": "^2.5.0",
     "mongodb": "^6.15.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
+    "resend": "^4.4.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
