--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/components/*": ["./app/components/*"]
+    },
     "target": "ES2017",
     "lib": [
       "dom",
@@ -21,7 +25,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    
   },
   "include": [
     "next-env.d.ts",
