--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-collapsible": "^1.1.10",
@@ -21,22 +22,26 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
     "mercadopago": "^2.5.0",
     "mongodb": "^6.15.0",
+    "multer": "^2.0.0",
     "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-slick": "^0.30.3",
     "resend": "^4.4.1",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
